new update commit

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -20,14 +20,16 @@
                     <div class="col-lg-8 col-md-12">
                         <div class="bostami-parsonal-info-wrap mb-40">
                             <h4 class="bostami-parsonal-info-title">Who am i?</h4>
-                            <p class="bostami-parsonal-info-bio-text">My name is Chayma Farhat, I am a 21-year-old
-                                aspiring developer passionate about crafting innovative solutions.</p>
-                            <p class="bostami-parsonal-info-bio-text">With a strong foundation in programming languages,
-                                web and mobile development,
-                                databases, and emerging technologies like Big Data and Machine Learning, I am committed
-                                to staying at the forefront of the rapidly evolving tech landscape. My journey in
-                                academia and hands-on projects has equipped me with a diverse skill set, and I am eager
-                                to contribute my expertise to challenging projects.</p>
+                            <p class="bostami-parsonal-info-bio-text"> My name is Chayma Farhat, a 22-year-old developer
+                                passionate about crafting innovative
+                                solutions. </p>
+                            <p class="bostami-parsonal-info-bio-text">
+                                With a solid foundation in programming languages, web and mobile development,
+                                databases, and emerging technologies like Big Data and Machine Learning, I am dedicated
+                                to staying at the forefront of the ever-evolving tech landscape. My academic journey,
+                                combined with hands-on projects, has equipped me with a diverse skill set, and I am
+                                eager to apply my expertise to challenging and impactful projects.
+                            </p>
                             <div class="bostami-parsonal-info-contact">
                                 <h3 class="title">Personal Info</h3>
                                 <div class="row">
