--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
                         </li>
                     </ul>
                     <div class="bostami-parsonal-info-btn">
-                        <a class="btn-2 circle" href="/assets/cv.pdf" download="cv.pdf">
+                        <a class="btn-2 circle" href="/assets/documents/Farhat_Chayma_ResumeCV.pdf" download="cv.pdf">
                             <span class="icon">
                                 <i class="fa-regular fa-download"></i>
                             </span>
