--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -19,11 +19,9 @@
                         </div>
                         <div class="bostami-card-wrap mb-50">
                             <div class="bostami-card-item bg-prink mb-20">
-                                <span class="card-subtitle">2021 - Present</span>
-                                <h6 class="card-title">Bachelor's Degree
-                                    Development of Information Systems (3rd year)</h6>
-                                <p class="card-text"><i>ISET Sousse (Higher
-                                        Institute of Technological Studies)</i></p>
+                                <span class="card-subtitle">2021 - 2024</span>
+                                <h6 class="card-title">Bachelor's Degree in Development of Information Systems</h6>
+                                <p class="card-text"><i>ISET Sousse (Higher Institute of Technological Studies)</i></p>
                                 <p class="card-text">Sousse, Tunisia</p>
                             </div>
                             <div class="bostami-card-item bg-catkrill mb-20">
@@ -40,17 +38,23 @@
                             <h4 class="section-title"><i class="fa-light fa-briefcase"></i>experience</h4>
                         </div>
                         <div class="bostami-card-wrap mb-50">
+                            <div class="bostami-card-item bg-prink mb-20">
+                                <span class="card-subtitle">Feb 2024 - May 2024</span>
+                                <h6 class="card-title">End of Studies Internship</h6>
+                                <p class="card-text"><i>Simesoft Technologies</i></p>
+                                <p class="card-text">Sousse, Tunisia</p>
+                            </div>
                             <div class="bostami-card-item bg-catkrill  mb-20">
-                                <span class="card-subtitle">Jan 2023-Feb 2023 </span>
-                                <h6 class="card-title">Perfectionnement internship </h6>
-                                <p class="card-text"><i>Dräxlmaier Group </i></p>
+                                <span class="card-subtitle">Jan 2023 - Feb 2023</span>
+                                <h6 class="card-title">Perfectionnement Internship</h6>
+                                <p class="card-text"><i>Dräxlmaier Group</i></p>
                                 <p class="card-text">Sousse, Tunisia</p>
                             </div>
                             <div class="bostami-card-item bg-prink mb-20">
-                                <span class="card-subtitle">Jan 2022-Feb 2022 </span>
-                                <h6 class="card-title">Initiation Internship </h6>
-                                <p class="card-text"><i>Tunisie Telecom </i></p>
-                                <p class="card-text">jemmel, Monastir, Tunisia </p>
+                                <span class="card-subtitle">Jan 2022 - Feb 2022</span>
+                                <h6 class="card-title">Initiation Internship</h6>
+                                <p class="card-text"><i>Tunisie Telecom</i></p>
+                                <p class="card-text">Monastir, Tunisia</p>
                             </div>
                         </div>
                     </div>
