--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -15,17 +15,17 @@
                     <div class="col-12">
                         <ul class="fillter-btn-wrap buttonGroup isotop-menu-wrapper mb-30">
                             <li class="fillter-btn is-checked " data-filter="*">All</li>
-                            <li class="fillter-btn" data-filter=".angular">Angular</li>
-                            <li class="fillter-btn" data-filter=".symfony">Symfony</li>
-                            <li class="fillter-btn" data-filter=".aspnet">.NET Core</li>
-                            <li class="fillter-btn" data-filter=".java">Java</li>
-                            <li class="fillter-btn" data-filter=".powerapps">PowerApps</li>
+                            <li class="fillter-btn" data-filter=".education">Education</li>
+                            <li class="fillter-btn" data-filter=".commerce">E-commerce</li>
+                            <li class="fillter-btn" data-filter=".entertainment">Entertainment</li>
+                            <li class="fillter-btn" data-filter=".estate">Real Estate</li>
+                            <li class="fillter-btn" data-filter=".other">Other</li>
                         </ul>
                     </div>
                     <div class="col-12">
                         <div id="fillter-item-active" class="fillter-item-wrap">
                             <div class="grid-sizer"></div>
-                            <div class="isotop-item angular">
+                            <div class="isotop-item entertainment">
                                 <div class="fillter-item bg-prink">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-1">
                                         <img src="assets/img/work/projects/pr1.png" alt="">
@@ -36,7 +36,7 @@
                                     </h6>
                                 </div>
                             </div>
-                            <div class=" isotop-item symfony">
+                            <div class=" isotop-item estate">
                                 <div class="fillter-item bg-catkrill ">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-5">
                                         <img src="assets/img/work/projects/pr5.png" alt="">
@@ -49,7 +49,7 @@
                                     </h6>
                                 </div>
                             </div>
-                            <div class="isotop-item angular">
+                            <div class="isotop-item entertainment">
                                 <div class="fillter-item bg-catkrill">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-2">
                                         <img src="assets/img/work/projects/pr2.png" alt="">
@@ -61,7 +61,7 @@
                                     </h6>
                                 </div>
                             </div>
-                            <div class=" isotop-item angular">
+                            <div class=" isotop-item entertainment">
                                 <div class="fillter-item bg-prink">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-3">
                                         <img src="assets/img/work/projects/pr3.png" alt="">
@@ -73,7 +73,7 @@
                                     </h6>
                                 </div>
                             </div>
-                            <div class="isotop-item symfony">
+                            <div class="isotop-item commerce">
                                 <div class="fillter-item bg-prink">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-6">
                                         <img src="assets/img/work/projects/pr6.png" alt="">
@@ -86,7 +86,7 @@
                                     </h6>
                                 </div>
                             </div>
-                            <div class="isotop-item angular">
+                            <div class="isotop-item entertainment">
                                 <div class="fillter-item bg-catkrill">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-4">
                                         <img src="assets/img/work/projects/pr4.png" alt="">
@@ -98,7 +98,7 @@
                                     </h6>
                                 </div>
                             </div>
-                            <div class=" isotop-item symfony">
+                            <div class=" isotop-item education">
                                 <div class="fillter-item bg-catkrill ">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-7">
                                         <img src="assets/img/work/projects/pr7.png" alt="">
@@ -109,7 +109,7 @@
                                     </h6>
                                 </div>
                             </div>
-                            <div class="isotop-item powerapps">
+                            <div class="isotop-item other">
                                 <div class="fillter-item bg-catkrill">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-8">
                                         <img src="assets/img/work/projects/pr8.png" alt="">
@@ -121,7 +121,7 @@
                                     </h6>
                                 </div>
                             </div>
-                            <div class="isotop-item aspnet">
+                            <div class="isotop-item education">
                                 <div class="fillter-item bg-prink">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-9">
                                         <img src="assets/img/work/projects/pr9.png" alt="">
@@ -132,7 +132,7 @@
                                     </h6>
                                 </div>
                             </div>
-                            <div class="isotop-item java">
+                            <div class="isotop-item other">
                                 <div class="fillter-item bg-prink">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-10">
                                         <img src="assets/img/work/projects/pr10.png" alt="">
@@ -143,14 +143,26 @@
                                     </h6>
                                 </div>
                             </div>
-                            <div class="isotop-item java">
+                            <div class="isotop-item entertainment">
                                 <div class="fillter-item bg-catkrill">
                                     <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-11">
                                         <img src="assets/img/work/projects/pr11.png" alt="">
                                     </a>
                                     <span class="item-subtitle">Java-powered</span>
                                     <h6 class="item-title">
-                                        <a href="#" data-bs-toggle="modal" data-bs-target="#portfolio-11">Anime Infinity</a>
+                                        <a href="#" data-bs-toggle="modal" data-bs-target="#portfolio-11">Anime
+                                            Infinity</a>
+                                    </h6>
+                                </div>
+                            </div>
+                            <div class="isotop-item other">
+                                <div class="fillter-item bg-catkrill">
+                                    <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-12">
+                                        <img src="assets/img/work/projects/pr12.png" alt="">
+                                    </a>
+                                    <span class="item-subtitle">Flutter-powered</span>
+                                    <h6 class="item-title">
+                                        <a href="#" data-bs-toggle="modal" data-bs-target="#portfolio-12">First Parc</a>
                                     </h6>
                                 </div>
                             </div>
