--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div class="footer-copyright text-center pt-25 pb-25">
-    <span>© 2024 All Rights Reserved by <a routerLink="home" target="_blank" rel="noopener noreferrer">Chayma
+    <span>© 2024 All Rights Reserved by <a routerLink="/" target="_blank" rel="noopener noreferrer">Chayma
             Farhat</a>.</span>
 </div>
