--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-2 col-md-6 col-sm-4 col-4 d-flex align-items-center">
                     <div class="bostami-header-logo">
-                        <a class="site-logo" routerLink="home">
+                        <a class="site-logo" routerLink="">
                             <img src="assets/img/profile/Chayma.png" alt="">
                         </a>
                     </div>
@@ -15,7 +15,7 @@
                             <nav class="bastami-main-menu main_menu_2">
                                 <ul>
                                     <li routerLinkActive="active">
-                                        <a routerLink="home">
+                                        <a routerLink="">
                                             <span>
                                                 <i class="fa-light fa-house"></i>
                                             </span>
