Add new portfolio link

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                         <img src="assets/img/profile/profile_img.png" alt="">
                     </div>
                     <h4 class="bostami-parsonal-info-name">
-                        <a href="#">Chayma Farhat</a>
+                        Chayma Farhat
                     </h4>
                     <span class="bostami-parsonal-info-bio mb-15">Full Stack Developer</span>
                     <ul class="bostami-parsonal-info-social-link mb-30">
@@ -33,7 +33,8 @@
                         </li>
                     </ul>
                     <div class="bostami-parsonal-info-btn">
-                        <a class="btn-2 circle" href="/assets/documents/Farhat_Chayma_ResumeCV.pdf" download="cv.pdf">
+                        <a class="btn-2 circle" href="../../assets/documents/Farhat_Chayma_ResumeCV.pdf"
+                            download="cv.pdf">
                             <span class="icon">
                                 <i class="fa-regular fa-download"></i>
                             </span>
